# appmais-ssl

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: DATASETS.md  SCALE_DOWNLOAD.md  SCRIPTS.md  TRAINING.md
prompts/: bee-dataset.md  ralph.sh
scripts/: appmais_download_diverse.py  build_frame_index.py  curate_videos.py  dino_foreground_masks.py  dino_pca_video.py  dino_video_heatmap.py  dinov3_pca_patch_rgb.py  eval_seed_detector.py  extract_video_frames.py  ls_video_dataset.py  predict_seed_detector.py  probe_archive.py  probe_roboflow_classes.py  seed_detector_audit.py  seed_detector_class_mapping.py  seed_detector_datasets.yaml  seed_detector_download.py  seed_detector_merge.py  smoke_bee_dataset.py  train_seed_detector.py  visualize_extracted_frames.py
src/appmais/: __init__.py  client.py
src/engine/: bee_crop.py  dataset.py
tests/: test_bee_crop.py  test_dataset.py  test_extract_video_frames.py  test_smoke_bee_dataset.py
