[project]
name = "engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "gabrielfruet", email = "gabrielfruet538@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "click>=8.4.1",
    "httpx>=0.28.1",
    "numpy>=2.4.6",
    "opencv-python>=4.13.0.92",
    "timm>=1.0.27",
    "torch>=2.12.0",
    "tqdm>=4.67.3",
]

[project.scripts]
engine = "engine:main"

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "basedpyright>=1.39.6",
    "pytest>=8.0",
    "ruff>=0.15.15",
]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.basedpyright]
include = ["src", "scripts"]
exclude = [".venv", "data"]
pythonVersion = "3.13"
typeCheckingMode = "basic"
reportMissingTypeStubs = false

[tool.pytest.ini_options]
pythonpath = ["src"]
